# osm-cpp

./: .gitignore  CMakeLists.txt  README.md  main.cpp  proto.sh
.github/workflows/: ci.yml
src/: main.cpp  parser.cpp  parser.h  utils.cpp  utils.h
src/proto/: fileformat.proto  osmformat.proto
